Parser added, jitter buffer added, log format 1 somewhat stable
Change-Id: Ifce284fa33901c06d4d6510fe8893d7984b025b2

--- a/logger/sw/CMakeLists.txt
+++ b/logger/sw/CMakeLists.txt
@@ -88,6 +88,7 @@ set(APP_SOURCES
 	${APP_DIR}/logger.c
 	${APP_DIR}/lsm303.c
 	${APP_DIR}/sdio.c
+	${APP_DIR}/jitter_buffer.c
 	${APP_DIR}/system_stm32f10x.c
 	${APP_DIR}/fs_hal.c
 	${APP_DIR}/lpry.c
