--- a/logger/sw/Doxyfile.in
+++ b/logger/sw/Doxyfile.in
@@ -680,7 +680,7 @@ RECURSIVE              = NO
 # excluded from the INPUT source files. This way you can easily exclude a 
 # subdirectory from a directory tree whose root is specified with the INPUT tag.
 
-EXCLUDE                = 
+EXCLUDE                = STM32F10x_StdPeriph_Lib_V3.5.0
 
 # The EXCLUDE_SYMLINKS tag can be used select whether or not files or 
 # directories that are symbolic links (a Unix file system feature) are excluded 
@@ -694,7 +694,9 @@ EXCLUDE_SYMLINKS       = NO
 # against the file with absolute path, so to exclude all test directories 
 # for example use the pattern */test/*
 
-EXCLUDE_PATTERNS       = *CMake*
+EXCLUDE_PATTERNS       = *CMake* \
+                         *system_stm32f10x* \
+                         */stm32f10x*
 
 # The EXCLUDE_SYMBOLS tag can be used to specify one or more symbol names 
 # (namespaces, classes, functions, etc.) that should be excluded from the 
