Added better EXTI handling and LSM303 interrupts -- don't work yet
Change-Id: I316001708c2091981234670dd185b6cc3ca12c6d

--- a/logger/sw/CMakeLists.txt
+++ b/logger/sw/CMakeLists.txt
@@ -95,6 +95,7 @@ set(APP_SOURCES
 	${APP_DIR}/main.c
 	${APP_DIR}/sdio_ll.c
 	${APP_DIR}/i2c.c
+	${APP_DIR}/exti.c
 	${APP_DIR}/lps001.c
 	${APP_DIR}/rtc.c
 	${APP_DIR}/stm32f10x_it.c
