Added Doxygen configuration and added a lot of documentation
Change-Id: I435edcc913a45263739bbbb61c9005e935187040

--- a/sw_imu/CMakeLists.txt
+++ b/sw_imu/CMakeLists.txt
@@ -289,7 +289,7 @@ add_custom_target(openocd_no_os COMMAND ${OPENOCD} ${OPENOCD_ARGS}
 
 find_package(Doxygen)
 if(DOXYGEN_FOUND)
-#	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
+	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
 	add_custom_target(doc
 		${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
 		WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
