--- a/sw_imu/Doxyfile.in
+++ b/sw_imu/Doxyfile.in
@@ -150,6 +150,7 @@ EXCLUDE                =
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = ${CMAKE_CURRENT_SOURCE_DIR}/os/* \
                          ${CMAKE_CURRENT_SOURCE_DIR}/doc/* \
+                         ${CMAKE_CURRENT_SOURCE_DIR}/CMSIS/* \
                          ${CMAKE_CURRENT_SOURCE_DIR}/build/*
 EXCLUDE_SYMBOLS        = 
 EXAMPLE_PATH           = 
