Started fixing problems with the filesystem not really being flash-friendly
Change-Id: I243777416066ac9918b7c34fb4a52f0e62ed057c

--- a/sw_imu/CMakeLists.txt
+++ b/sw_imu/CMakeLists.txt
@@ -72,7 +72,7 @@ set(FS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/coffee)
 # Build Options
 ########################################################
 
-set(OPTIMIZATION "-Os")
+set(OPTIMIZATION "-O0")
 set(LTO )#"-flto")
 
 set(MCU cortex-m4)
