The filesystem; it works!

--- a/sw_imu/CMakeLists.txt
+++ b/sw_imu/CMakeLists.txt
@@ -72,13 +72,13 @@ set(FS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/coffee)
 # Build Options
 ########################################################
 
-set(OPTIMIZATION "-O0")
+set(OPTIMIZATION "-Og")
 set(LTO )#"-flto")
 
 set(MCU cortex-m4)
 
 
-set(MCFLAGS "-mcpu=${MCU} -g -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard -fsingle-precision-constant -D__NEWLIB__")# -fomit-frame-pointer")
+set(MCFLAGS "-mcpu=${MCU} -g -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard -fsingle-precision-constant -fomit-frame-pointer -D__NEWLIB__")# -fomit-frame-pointer")
 
 add_definitions(${MCFLAGS})
 add_definitions(-DHSE_VALUE=8000000 -DARM_MATH_CM4 -D__FPU_PRESENT)
