--- a/sw_imu/start.gdb.in
+++ b/sw_imu/start.gdb.in
@@ -13,10 +13,10 @@ set remotetimeout 2
 file @OUTFILE@
 
 shell killall -q openocd
-target remote | openocd -c "gdb_port pipe; log_output openocd.log" @OPENOCD_ARGS@
+target remote | openocd -c "gdb_port pipe; log_output openocd.log" @OPENOCD_ARGS@ @OPENOCD_RTOS@
+
 monitor reset init
 
 l
 r
-b main
 r
