Added CMake configuration options for important things like clock management and SVD files
Change-Id: Iedf9af8f204850b6adfea4a3994fd00109e4b89d

--- a/sw_imu/start.gdb.in
+++ b/sw_imu/start.gdb.in
@@ -17,6 +17,11 @@ target remote | openocd -c "gdb_port pipe; log_output openocd.log" @OPENOCD_ARGS
 
 monitor reset init
 
+@GDB_LOAD_SVD@
+
 l
 r
+
+set *((uint32_t *)  0xE0042004) = 7
+
 r
